# Active-Learning-Evaluation-Framework

./: .dockerignore  .gitignore  DockerfileCUDA  README.md  ale-cuda.yaml  dev-setup.sh  docker-compose.mlflow.yaml  pyproject.toml
.github/workflows/: build-image.yaml
ale/: config.py  import_helper.py  main.py  utils.py
ale/bias/: bias.py  data_distribution.py  utils.py
ale/conf/: config.yaml
ale/corpus/: __init__.py  corpus.py
ale/data/: data.py  huggingface_load_dataset_conll.py
ale/metrics/: accuracy.py
ale/mlflowutils/: ale_mlflow_artifact_files.py  mlflow_utils.py
ale/pipeline/: components.py  pipeline.py  pipeline_component.py  pipeline_storage.py
ale/preprocessing/: add_id_to_jsonl.py
ale/proposer/: proposer.py  proposer_per_seed.py
ale/registry/: __init__.py  registerable_component.py  registerable_corpus.py  registerable_model.py  registerable_pipeline_component.py  registerable_teacher.py  registerable_trainer.py
ale/reports/: generate_csv_reports.py  generate_reports.py
ale/spacy_logger/: __init__.py  spacy_mlflow_logger.py
ale/teacher/: __init__.py  base_teacher.py  teacher_utils.py  utils.py
ale/trainer/: __init__.py  base_trainer.py  dummy_trainer.py  prediction_result.py  prediction_trainer.py  predictor.py  spacy_trainer.py
data/trec/: trec_dev.jsonl  trec_test.jsonl  trec_train.jsonl
evaluation_scripts/: evaluation_test.sh  evaluation_test_conll_med.sh  evaluation_test_v2.sh  f1_macro_score_investigation.py  variance_test_v2.sh
mlflow-server/: Dockerfile
spacy_config/: config.cfg  config_spancat.cfg
(+126 files in other folders)
