[tool.poetry]
name = "ale"
version = "0.1.1"
description = "Active Learning Evaluation Framework"
authors = ["Philipp Kohl <p.kohl@fh-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"

mlflow = "^2.1.1"
hydra-core = "^1.3.0"
click = "^8.1.3"
datasets = "^2.3.1"
haikunator = "^2.1.0"
setuptools = "^63.2.0"
scikit-learn = "^1.2.1"
boto3 = "^1.24.44"
gensim = "^4.2.0"
hydra-colorlog = "^1.2.0"
pydantic = "^1.10.4"
plotly = "^5.13.0"
lightning = "^2.2.1"
rich = "^13.7.1"
srsly = "^2.4.8"
transformers = "^4.39.1"
pytest = "^8.1.1"
torchvision = "^0.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
